Fix action bar buttons being vertical when too narrow

--- a/resources/skin.less
+++ b/resources/skin.less
@@ -802,6 +802,7 @@ div.editOptions {
   font-weight: bold;
   display: inline-block;
   overflow: visible;
+  white-space: nowrap;
 }
 
 /* TOC */
